--- a/custom_components/versatile_thermostat/translations/ru.json
+++ b/custom_components/versatile_thermostat/translations/ru.json
@@ -114,7 +114,7 @@
           "auto_regulation_mode": "Автоматическая корректировка целевой температуры",
           "auto_regulation_dtemp": "Порог в ° (или % для клапана), ниже которого изменение температуры не будет отправлено",
           "auto_regulation_periode_min": "Время в минутах между двумя обновлениями регулирования",
-          "auto_regulation_use_device_temp": "Использовать внутренний датчик температуры устройства для ускорения саморегулирования",
+          "auto_regulation_use_device_temp": "Использовать внутренний датчик температуры устройства для ускорения саморегулирования (в большинстве случаев не требуется)",
           "inverse_switch_command": "Для переключателей с пилотным проводом и диодом может потребоваться инвертировать команду",
           "auto_fan_mode": "Автоматически активировать вентилятор при необходимости сильного обогрева/охлаждения",
           "on_command_text": "Для устройств типа `select` или `climate` необходимо настроить команды."
@@ -393,7 +393,7 @@
           "auto_regulation_mode": "Автоматическая корректировка целевой температуры",
           "auto_regulation_dtemp": "Порог в ° (или % для клапана), ниже которого изменение температуры не будет отправлено",
           "auto_regulation_periode_min": "Время в минутах между двумя обновлениями регулирования",
-          "auto_regulation_use_device_temp": "Использовать внутренний датчик температуры устройства для ускорения саморегулирования",
+          "auto_regulation_use_device_temp": "Использовать внутренний датчик температуры устройства для ускорения саморегулирования (в большинстве случаев не требуется)",
           "inverse_switch_command": "Для переключателей с пилотным проводом и диодом может потребоваться инвертировать команду",
           "auto_fan_mode": "Автоматически активировать вентилятор при необходимости сильного обогрева/охлаждения",
           "on_command_text": "Для устройств типа `select` или `climate` необходимо настроить команды."
