--- a/custom_components/versatile_thermostat/translations/sk.json
+++ b/custom_components/versatile_thermostat/translations/sk.json
@@ -130,7 +130,7 @@
           "auto_regulation_mode": "Automatické nastavenie cieľovej teploty",
           "auto_regulation_dtemp": "Hranica v °, pod ktorou sa zmena teploty neodošle",
           "auto_regulation_periode_min": "Trvanie v minútach medzi dvoma aktualizáciami predpisov",
-          "auto_regulation_use_device_temp": "Na urýchlenie samoregulácie použite prípadný vnútorný snímač teploty podkladu",
+          "auto_regulation_use_device_temp": "Na urýchlenie samoregulácie použite prípadný vnútorný snímač teploty podkladu (vo väčšine prípadov nie je potrebné)",
           "inverse_switch_command": "V prípade spínača s pilotným vodičom a diódou možno budete musieť príkaz invertovať",
           "auto_fan_mode": "Automaticky aktivujte ventilátor, keď je potrebné veľké vykurovanie/chladenie"
         }
@@ -384,7 +384,7 @@
           "auto_regulation_mode": "Automatické nastavenie cieľovej teploty",
           "auto_regulation_dtemp": "Hranica v °, pod ktorou sa zmena teploty neodošle",
           "auto_regulation_periode_min": "Trvanie v minútach medzi dvoma aktualizáciami predpisov",
-          "auto_regulation_use_device_temp": "Na urýchlenie samoregulácie použite prípadný vnútorný snímač teploty podkladu",
+          "auto_regulation_use_device_temp": "Na urýchlenie samoregulácie použite prípadný vnútorný snímač teploty podkladu (vo väčšine prípadov nie je potrebné)",
           "inverse_switch_command": "V prípade spínača s pilotným vodičom a diódou možno budete musieť príkaz invertovať",
           "auto_fan_mode": "Automaticky aktivujte ventilátor, keď je potrebné veľké vykurovanie/chladenie"
         }
