--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -858,7 +858,7 @@
         },
         "capacity_safety_margin": {
           "name": "Safety Margin for Capacity",
-          "description": "Margin percentage to subtract from max capacity before saving (default 20%). Valid range 0-90%."
+          "description": "Margin percentage to subtract from max capacity before saving. Valid range 0-30%. Default is 20%."
         }
       }
     },
