--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -860,7 +860,7 @@
         },
         "capacity_safety_margin": {
           "name": "Marge de sécurité",
-          "description": "Marge de sécurité en pourcentage à soustraire de la capacité maximale avant sauvegarde (défaut 20%). Plage valide 0-90%."
+          "description": "Marge de sécurité en pourcentage à soustraire de la capacité maximale avant sauvegarde. Plage valide 0-30%. Défaut 20%."
         }
       }
     },
